# sourcevault

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  sonar-project.properties  sourcevault.pro
src/core/: CMakeLists.txt  core.pro
src/core/model/: Article.cpp  Article.h  Book.cpp  Book.h  Library.cpp  Library.h  LibrarySignals.h  Medium.cpp  Medium.h  MediumUserData.cpp  MediumUserData.h  OptionalField.h  ValidatedField.h  ValidatedSet.h  Video.cpp  Video.h
src/core/persistence/: MediaSerializationConfigs.h
src/core/persistence/json/: DeserializationError.h  JsonArticleParser.cpp  JsonArticleParser.h  JsonBookParser.cpp  JsonBookParser.h  JsonConverter.h  JsonDeserializationUtils.h  JsonMediaDeserializer.cpp  JsonMediaDeserializer.h  JsonMediaSerializer.cpp  JsonMediaSerializer.h  JsonMediumParser.h  JsonMediumSerializerVisitor.cpp  JsonPersistenceManager.cpp  JsonPersistenceManager.h  JsonVideoParser.cpp  JsonVideoParser.h
src/core/persistence/json/deserialization/: JsonArticleParser.cpp  JsonArticleParser.h  JsonBookParser.cpp  JsonBookParser.h  JsonConverter.h  JsonMediaDeserializer.cpp  JsonMediaDeserializer.h  JsonMediumParser.h  JsonParsingLib.h  JsonVideoParser.cpp  JsonVideoParser.h
src/core/persistence/json/serialization/: JsonMediaSerializer.cpp  JsonMediaSerializer.h  JsonMediumSerializerVisitor.h
src/core/persistence/thumbnails/: MediumThumbnailSetter.cpp  MediumThumbnailSetter.h  MediumThumbnailVisitor.cpp  MediumThumbnailVisitor.h  ThumbnailsExporter.cpp  ThumbnailsExporter.h  ThumbnailsImporter.cpp  ThumbnailsImporter.h
src/core/queries/: FilteringQuery.cpp  FilteringQuery.h  Query.h  QueryBuilder.cpp  QueryBuilder.h  SearchQuery.cpp  SearchQuery.h  SortingQuery.cpp  SortingQuery.h
src/core/queries/filters/: FavoriteFilter.cpp  FavoriteFilter.h  Filter.h  MediumTypeFilter.cpp  MediumTypeFilter.h  MinimumPriorityFilter.cpp  MinimumPriorityFilter.h  TopicsFilter.cpp  TopicsFilter.h
src/core/queries/search/: FieldScoreCalculator.cpp  FieldScoreCalculator.h  SearchEngine.cpp  SearchEngine.h  SearchScoreVisitor.cpp  SearchScoreVisitor.h
src/core/queries/sortings/: DateAddedSort.cpp  DateAddedSort.h  PrioritySort.cpp  PrioritySort.h  Sort.cpp  Sort.h  TitleSort.cpp  TitleSort.h
src/core/shared/: Cloneable.h  ConcreteMediumConcept.h  MediumTypeVisitor.cpp  MediumTypeVisitor.h  MediumVisitor.h  MutMediumVisitor.h  OverloadedVariantVisitor.h  QUuidHasher.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/gui-qt6/: AppController.cpp  AppController.h  CMakeLists.txt  DetailPageFactory.cpp  DetailPageFactory.h  DialogsController.cpp  DialogsController.h  MainWindow.cpp  MainWindow.h  MediumToDetailPageVisitor.cpp  MediumToDetailPageVisitor.h  README.md  gui-qt6.pro  main.cpp  resources.qrc
src/gui-qt6/components/library-page/: LibraryPage.cpp  LibraryPage.h  LibraryPageController.cpp  LibraryPageController.h  LibraryQueryBuilder.cpp  LibraryQueryBuilder.h  MediumCardsViewModelFactory.cpp  MediumCardsViewModelFactory.h  MediumToCardVisitor.cpp  MediumToCardVisitor.h
src/gui-qt6/components/library-page/media-list/: LibraryMediaList.cpp  LibraryMediaList.h  LibraryMediumCard.cpp  LibraryMediumCard.h
src/gui-qt6/components/library-page/sidebar/: LibrarySidebar.cpp  LibrarySidebar.h
src/gui-qt6/components/library-page/topbar/: LibraryTopbar.cpp  LibraryTopbar.h
src/gui-qt6/components/medium-detail/: ArticleCreateController.cpp  ArticleCreateController.h  ArticleDetailPage.cpp  ArticleDetailPage.h  ArticleDetailPageController.cpp  ArticleDetailPageController.h  BookCreateController.cpp  BookCreateController.h  BookDetailPage.cpp  BookDetailPage.h  BookDetailPageController.cpp  BookDetailPageController.h  CreateController.h  DetailPage.cpp  DetailPage.h  DetailPageController.h  VideoCreateController.cpp  VideoCreateController.h  VideoDetailPage.cpp  VideoDetailPage.h  VideoDetailPageController.cpp  VideoDetailPageController.h
src/gui-qt6/components/medium-detail/detail-sections/: ArticleDetailSection.cpp  ArticleDetailSection.h  ArticleSectionController.cpp  ArticleSectionController.h  BookDetailSection.cpp  BookDetailSection.h  VideoDetailSection.h  (+15 more)
src/gui-qt6/components/menubar/: Menubar.cpp  Menubar.h  MenubarController.cpp  MenubarController.h
src/gui-qt6/components/thumbnail-renderer/: ThumbnailRenderer.cpp  ThumbnailRenderer.h
tests/core/: CMakeLists.txt  CoreTestsMain.cpp  core.pro
tests/core/mocks/: MockConcreteMedium.h
tests/core/model/: TestArticle.cpp  TestArticle.h  TestBook.cpp  TestBook.h  TestLibrary.cpp  TestLibrary.h  TestMedium.cpp  TestMedium.h  TestMediumUserData.cpp  TestMediumUserData.h  TestOptionalField.cpp  TestOptionalField.h  TestValidatedField.cpp  TestValidatedField.h  TestValidatedSet.cpp  TestValidatedSet.h  TestVideo.cpp  TestVideo.h
tests/core/persistence/json/: TestJsonMediaSerializer.cpp  TestJsonMediaSerializer.h  TestJsonMediumSerializerVisitor.cpp  TestJsonPersistenceManager.cpp  TestJsonPersistenceManager.h
tests/core/persistence/thumbnails/: TestMediumThumbnailSetter.cpp  TestMediumThumbnailSetter.h  TestMediumThumbnailVisitor.cpp  TestMediumThumbnailVisitor.h  TestThumbnailsExporter.cpp  TestThumbnailsExporter.h  TestThumbnailsImporter.cpp  TestThumbnailsImporter.h
tests/core/queries/: TestFilteringQuery.cpp  TestFilteringQuery.h  TestQueryBuilder.cpp  TestQueryBuilder.h  TestSearchQuery.cpp  TestSearchQuery.h  TestSortingQuery.cpp  TestSortingQuery.h
tests/core/queries/filters/: TestFavoriteFilter.cpp  TestFavoriteFilter.h  TestMediumTypeFilter.cpp  TestMediumTypeFilter.h
tests/core/queries/search/: TestFieldScoreCalculator.cpp  TestFieldScoreCalculator.h  TestSearchEngine.cpp  TestSearchEngine.h  TestSearchScoreVisitor.cpp  TestSearchScoreVisitor.h
tests/core/queries/sortings/: TestDateAddedSort.cpp  TestDateAddedSort.h  TestSort.cpp  TestSort.h
tests/core/shared/: TestMediumTypeVisitor.cpp  TestMediumTypeVisitor.h
tests/core/testutils/fixtures/: JsonSerializationFixtures.h
tests/core/testutils/mocks/: MockConcreteMedium.h
(+69 files in other folders)
